<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.hms</groupId>
    <artifactId>home-media-server</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <name>home-media-server</name>
    <description>Spring Boot microservices for home media automation and streaming</description>

    <modules>
        <module>sql-lib</module>
        <module>shared-lib</module>
        <module>api-gateway-service</module>
        <module>media-catalog-service</module>
        <module>media-acquisition-service</module>
        <module>media-stream-service</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <spring-boot.version>4.1.0</spring-boot.version>
        <spring-cloud.version>2025.1.2</spring-cloud.version>
        <!-- <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target> -->
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <bt-version>1.10</bt-version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.hms</groupId>
                <artifactId>sql-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hms</groupId>
                <artifactId>shared-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>2.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>